Fix CSS bugs on mobile

--- a/vizro-core/src/vizro/static/css/card.css
+++ b/vizro-core/src/vizro/static/css/card.css
@@ -30,6 +30,7 @@
   position: absolute;
   top: 0;
   width: 100%;
+  display: contents;
 }
 
 .card_text h1,
